--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript-Kurs</title>
-</head>
-<body>
-    <script src="index.js"></script>
-</body>
+  </head>
+  <body>
+    <script>
+      alert(prompt("Wie heissen Sie?"));
+      alert("Sie heissen " + prompt("Wie heissen Sie?"));
+    </script>
+  </body>
 </html>
