--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script>
+      "use strict";
       alert(prompt("Wie heissen Sie?"));
       alert("Sie heissen " + prompt("Wie heissen Sie?"));
     </script>
